# TheAlgorithms

./: pyproject.toml
src/: main.py
src/thealgorithms/: __init__.py  maxsubarr.py  mergesort.py
tests/thealgorithms/: maxsubarr_test.py  mergesort_test.py
