[tool.poetry]
name = "thealgorithms"
version = "0.1.0"
description = ""
authors = ["Maxwell Schultz <mw.schultz2002@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
